--- a/Kiba/Base.lproj/Main.storyboard
+++ b/Kiba/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -245,24 +245,23 @@
             </objects>
             <point key="canvasLocation" x="-836" y="3782"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="ej7-iV-3pO">
+        <!--About-->
+        <scene sceneID="GnE-in-DYG">
             <objects>
-                <viewController storyboardIdentifier="about" id="3uM-zs-r2e" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="about" id="H0k-54-zjM" customClass="KBAAbout" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="nxC-SH-iP4"/>
-                        <viewControllerLayoutGuide type="bottom" id="LjC-1O-m6C"/>
+                        <viewControllerLayoutGuide type="top" id="Kqn-dr-Bn2"/>
+                        <viewControllerLayoutGuide type="bottom" id="wu4-lr-KjD"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="uxI-sZ-ror">
+                    <view key="view" contentMode="scaleToFill" id="hQV-F9-5Kn">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qzL-9E-5jX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R8z-Gl-yyq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="156" y="3782"/>
+            <point key="canvasLocation" x="1068" y="3782"/>
         </scene>
         <!--Self Serv Contr-->
         <scene sceneID="fov-EU-bul">
