--- a/Kiba/View/Finance/KBAFinanceController.xib
+++ b/Kiba/View/Finance/KBAFinanceController.xib
@@ -163,6 +163,9 @@
                     <state key="normal" title="Termin vereinbaren">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="requestAppointment:" destination="-1" eventType="touchUpInside" id="T0e-Oa-e8A"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
