popover for info button at self-service view. NSLogs commentate.

--- a/Kiba/View/Finder/KBABranchController.xib
+++ b/Kiba/View/Finder/KBABranchController.xib
@@ -138,6 +138,9 @@
                                 <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="makeCall:" destination="-1" eventType="touchUpInside" id="BTl-Jv-Ill"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
